--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       background-color: transparent; color: #000;
     }
     .nav-pills .nav-link.active {
-      background-color: #ffc107; font-weight: bold; color: #000;
+      background-color: #ffc107; font-weight: bold; font-style: italic; color: #000;
     }
   </style>
 
